# BoltForge

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  THIRD_PARTY.md  vcpkg.json
.github/workflows/: ci.yml
data/: disc_database.yml
data/schemas/: asset_manifest.schema.json  disc_database.schema.json  level.schema.json  moby.schema.json  pvar.schema.json  sound_bank.schema.json  texture.schema.json
data/synthetic_fixtures/: README.md
docs/: agent_tooling_recommendations.md  disc-database.md  legal-boundaries.md  license-strategy.md  ratchet_clank_pc_port_plan.md  reverse-engineering-workflow.md  toolchain_setup.md
docs/asset-formats/: README.md
docs/engine/: README.md
docs/testing/: README.md
engine/: README.md
engine/audio/: README.md
engine/core/: README.md
engine/gameplay/: README.md
engine/input/: README.md
engine/net/: README.md
engine/physics/: README.md
engine/platform/: README.md
engine/render/: README.md
engine/ui/: README.md
launcher/: README.md
scripts/: check_repo_hygiene.ps1  verify_toolchain.ps1
tests/: README.md  smoke_test.cpp
tests/golden_assets/: README.md
tests/integration/: README.md
tests/replay/: README.md
tests/unit/: README.md
tools/: README.md
tools/asset_inspector/: README.md
tools/decomp_support/: README.md
tools/iso_importer/: README.md
tools/level_viewer/: README.md
tools/save_tool/: README.md
tools/trace_tools/: README.md
tools/wad_tool/: README.md
(+4 files in other folders)
